Add `podcastguid` option to `episodes/byguid`
Also adds `podcastGuid` to response for `episodes/byguid`

--- a/api_src/components/responses/episodes_byguid.yaml
+++ b/api_src/components/responses/episodes_byguid.yaml
@@ -10,6 +10,8 @@ content:
           $ref: '../properties/feedid_query.yaml'
         url:
           $ref: '../properties/feedurl_query.yaml'
+        podcastGuid:
+          $ref: '../properties/podcastguid.yaml'
         guid:
           $ref: '../properties/guid_query.yaml'
         episode:
