Add podcast-valueTimeSplit parameter to /podcasts/bytag
https://podcastindex.social/@dave/111250186996313754

--- a/api_src/paths/podcasts/bytag.yaml
+++ b/api_src/paths/podcasts/bytag.yaml
@@ -8,7 +8,13 @@ get:
     [podcast namespace](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md) tag.
 
 
-    The only supported tag is `podcast:value` using the `podcast-value` parameter.
+    The only supported tags are:
+      - `podcast:value` using the `podcast-value` parameter
+      - `podcast:valueTimeSplit` using the `podcast-valueTimeSplit` parameter
+
+
+    Only the `podcast-value` or `podcast-valueTimeSplit` parameter should be used. If multiple are specified, the
+    first parameter is used and the others are ignored.
 
 
     When called without a `start_at` value, the top 500 feeds sorted by popularity are returned in descending order.
@@ -22,11 +28,13 @@ get:
     Examples:
       - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-value&max=200&pretty
       - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-value&max=200&start_at=1&pretty
+      - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-valueTimeSplit&pretty
   operationId: podcasts/bytag
   security:
     - $ref: '../../components/security/security.yaml'
   parameters:
     - $ref: '../../components/parameters/podcast-value.yaml'
+    - $ref: '../../components/parameters/podcast-valueTimeSplit.yaml'
     - $ref: '../../components/parameters/max_5000.yaml'
     - $ref: '../../components/parameters/start_at.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
