--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.2
 info:
-  version: 1.11.0
+  version: 1.12.0
   title: PodcastIndex.org API
   termsOfService: https://github.com/Podcastindex-org/legal/blob/main/TermsOfService.md
   contact:
@@ -589,7 +589,13 @@ paths:
         [podcast namespace](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md) tag.
 
 
-        The only supported tag is `podcast:value` using the `podcast-value` parameter.
+        The only supported tags are:
+          - `podcast:value` using the `podcast-value` parameter
+          - `podcast:valueTimeSplit` using the `podcast-valueTimeSplit` parameter
+
+
+        Only the `podcast-value` or `podcast-valueTimeSplit` parameter should be used. If multiple are specified, the
+        first parameter is used and the others are ignored.
 
 
         When called without a `start_at` value, the top 500 feeds sorted by popularity are returned in descending order.
@@ -603,6 +609,7 @@ paths:
         Examples:
           - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-value&max=200&pretty
           - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-value&max=200&start_at=1&pretty
+          - https://api.podcastindex.org/api/1.0/podcasts/bytag?podcast-valueTimeSplit&pretty
       operationId: podcasts/bytag
       security:
         - API-Key: []
@@ -611,6 +618,7 @@ paths:
           Authorization: []
       parameters:
         - $ref: '#/components/parameters/podcast-value'
+        - $ref: '#/components/parameters/podcast-valueTimeSplit'
         - $ref: '#/components/parameters/max_5000'
         - $ref: '#/components/parameters/start_at'
         - $ref: '#/components/parameters/pretty'
@@ -1759,14 +1767,26 @@ components:
       name: podcast-value
       in: query
       description: |
-        Get feeds supporting the `value` tag.
+        Get feeds supporting the [`podcast:value`](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#value) tag.
 
 
         Parameter shall not have a value
       schema:
         type: boolean
       allowEmptyValue: true
-      required: true
+      required: false
+    podcast-valueTimeSplit:
+      name: podcast-valueTimeSplit
+      in: query
+      description: |
+        Get feeds supporting the [`podcast:valueTimeSplit`](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#value-time-split) tag.
+
+
+        Parameter shall not have a value
+      schema:
+        type: boolean
+      allowEmptyValue: true
+      required: false
     max_5000:
       name: max
       in: query
