--- a/api_src/components/parameters/podcast-value.yaml
+++ b/api_src/components/parameters/podcast-value.yaml
@@ -2,11 +2,11 @@ name: podcast-value
 in: query
 # language=Markdown
 description: |
-  Get feeds supporting the `value` tag.
+  Get feeds supporting the [`podcast:value`](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#value) tag.
 
 
   Parameter shall not have a value
 schema:
   type: boolean
 allowEmptyValue: true
-required: true
+required: false
