Add newest argument to `/episodes/byfeedid`
https://podcastindex.social/@dave/113006227150285081

--- a/api_src/paths/episodes/byfeedid.yaml
+++ b/api_src/paths/episodes/byfeedid.yaml
@@ -15,6 +15,8 @@ get:
 
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&pretty
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&pretty
+      - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&newest&pretty
+      - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&newest&pretty
       - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=169991&pretty
       - Includes `value`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=4058673&pretty
       - Using `enclosure`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504&enclosure=https://op3.dev/e/mp3s.nashownotes.com/NA-1551-2023-04-30-Final.mp3&pretty
@@ -27,6 +29,7 @@ get:
     - $ref: '../../components/parameters/max.yaml'
     - $ref: '../../components/parameters/enclosure.yaml'
     - $ref: '../../components/parameters/fulltext.yaml'
+    - $ref: '../../components/parameters/newest.yaml'
     - $ref: '../../components/parameters/pretty.yaml'
   responses:
     '200':
