--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -734,6 +734,8 @@ paths:
 
           - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&pretty
           - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&pretty
+          - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&newest&pretty
+          - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&newest&pretty
           - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=169991&pretty
           - Includes `value`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=4058673&pretty
           - Using `enclosure`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504&enclosure=https://op3.dev/e/mp3s.nashownotes.com/NA-1551-2023-04-30-Final.mp3&pretty
@@ -749,6 +751,7 @@ paths:
         - $ref: '#/components/parameters/max'
         - $ref: '#/components/parameters/enclosure'
         - $ref: '#/components/parameters/fulltext'
+        - $ref: '#/components/parameters/newest'
         - $ref: '#/components/parameters/pretty'
       responses:
         '200':
@@ -1964,6 +1967,17 @@ components:
       schema:
         type: string
       example: https://op3.dev/e/mp3s.nashownotes.com/NA-1551-2023-04-30-Final.mp3
+    newest:
+      name: newest
+      in: query
+      description: |
+        If present, returns only the most recent (newest) episode for each specified feed id.
+
+
+        Parameter shall not have a value
+      schema:
+        type: boolean
+      allowEmptyValue: true
     id_episode_pi:
       name: id
       in: query
