--- a/api_src/paths/stats/current.yaml
+++ b/api_src/paths/stats/current.yaml
@@ -7,7 +7,12 @@ get:
     Return the most recent index statistics.
 
 
-    Hourly statistics can also be access at https://stats.podcastindex.org/daily_counts.json
+    Hourly statistics can also be access at https://stats.podcastindex.org/hourly_counts.json
+    For details, see [Stats Hourly Counts](#get-/static/stats/hourly_counts.json).
+
+
+    Daily statistics can also be access at https://stats.podcastindex.org/daily_counts.json.
+    For details, see [Stats Daily Counts](#get-/static/stats/daily_counts.json).
 
 
     Example: https://api.podcastindex.org/api/1.0/stats/current?pretty
