--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ indent_style = space
 insert_final_newline = true
 max_line_length = 120
 tab_width = 4
+trim_trailing_whitespace = true
 
 [{*.yaml,*.yml}]
 indent_size = 2
