--- a/api_src/paths/recent/data.yaml
+++ b/api_src/paths/recent/data.yaml
@@ -5,17 +5,18 @@ get:
   # language=Markdown
   description: |
     This call returns every new feed and episode added to the index over the past 24 hours in reverse chronological order.
-    
-    
+
+
     This is similar to `/recent/feeds` but uses the date the feed was found by the index rather than the feed's
     internal timestamp.
-    
-    
+
+
     Similar data can also be accessed using object storage root url https://tracking.podcastindex.org/current
-    
-    
+    For details, see [Current](#get-/static/tracking/current).
+
+
     Examples:
-    
+
       - https://api.podcastindex.org/api/1.0/recent/data?pretty
       - https://api.podcastindex.org/api/1.0/recent/data?pretty&max=10
       - https://api.podcastindex.org/api/1.0/recent/data?pretty&max=10&since=1671164867
