--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -80,7 +80,7 @@ info:
       3. Import the `PodcastIndexOrgEnvironment.postman_environment.json` to Postman
       4. Click "Environments" on the left sidebar
       5. Select the checkbox next to the PodcastIndexOrgEnvironment entry
-      6. Set `AuthKey` and `SeceretKey` values under the "Current Value" column using your API information 
+      6. Set `AuthKey` and `SeceretKey` values under the "Current Value" column using your API information
       7. Click "Collections" from the sidebar
       8. Select PodcastIndex
       9. Select and run the endpoint to test
@@ -105,7 +105,7 @@ info:
     See [Authentication](#auth) for description of parameters.
 
     # Legal
-    
+
     Legal
 
       - [Privacy Policy](https://github.com/Podcastindex-org/legal/blob/main/PrivacyPolicy.md)
@@ -243,6 +243,28 @@ paths:
     $ref: 'paths/add/byfeedurl.yaml'
   '/add/byitunesid':
     $ref: 'paths/add/byitunesid.yaml'
+  '/static/stats/daily_counts.json':
+    $ref: 'paths/static/stats/daily_counts.yaml'
+  '/static/stats/hourly_counts.json':
+    $ref: 'paths/static/stats/hourly_counts.yaml'
+  '/static/stats/chart-data.json':
+    $ref: 'paths/static/stats/v4v.yaml'
+  '/static/stats/v4vmusic.json':
+    $ref: 'paths/static/stats/music_json.yaml'
+  '/static/stats/v4vmusic.opml':
+    $ref: 'paths/static/stats/music_opml.yaml'
+  '/static/stats/v4vmusic.rss':
+    $ref: 'paths/static/stats/music_rss.yaml'
+  '/static/tracking/current':
+    $ref: 'paths/static/tracking/current.yaml'
+  '/static/tracking/feedValueBlocks':
+    $ref: 'paths/static/tracking/feedValueBlocks.yaml'
+  '/static/tracking/episodeValueBlocks':
+    $ref: 'paths/static/tracking/episodeValueBlocks.yaml'
+  '/static/public/podcastindex_dead_feeds.csv':
+    $ref: 'paths/static/public/podcastindex_dead_feeds.yaml'
+  '/static/public/podcastindex_feeds.db.tgz':
+    $ref: 'paths/static/public/podcastindex_feeds_db.yaml'
   # currently not used and has some bugs. leaving off for now
   #'/add/batch/byfeedurl':
   #  $ref: 'paths/add/batch/byfeedurl.yaml'
