--- a/api_src/root.yaml
+++ b/api_src/root.yaml
@@ -65,6 +65,8 @@ info:
           - [podcast-index](https://github.com/jasonyork/podcast-index)
       - Swift
           - [PodcastIndexKit](https://github.com/SparrowTek/PodcastIndexKit)
+      - Kotlin
+          - [PodcastIndex-SDK](https://github.com/mr3y-the-programmer/PodcastIndex-SDK)
 
     Are we missing a library? Did you create one for a different language? Create a
     [Pull Request](https://github.com/Podcastindex-org/docs-api/pulls) with a link to the new library!
