Add "format" to the "imageUrlHash" field in the OpenAPI spec because it is a 64 bit integer (https://github.com/Podcastindex-org/docs-api/issues/135)

--- a/api_src/components/properties/imageUrlHash.yaml
+++ b/api_src/components/properties/imageUrlHash.yaml
@@ -1,5 +1,5 @@
   # language=Markdown
 description: |
-  A CRC32 hash of the `image` URL with the protocol (`http://`, `https://`) removed.
+  A CRC32 hash of the `image` URL with the protocol (`http://`, `https://`) removed. 64bit integer.
 type: integer
-example: 1639321931
+example: 3969216649
